# projet-dep-auto-m2

./: .pre-commit-config.yaml  README.md  docker-compose.yml  pre-commit-config.yaml
.github/workflows/: docker-back-infer.yaml  docker-back-rest.yaml  docker-front.yaml  linting.yaml
backend/onnx-inference/: Dockerfile  convert-onnx.py  main.py  pyproject.toml
backend/onnx-inference/test/: config.yaml
backend/onnx-inference/tests/: config.yaml
backend/onnx-inference/yolo/: core.py
backend/rest-api/: Dockerfile  main.py  pyproject.toml
backend/rest-api/config/: schemas.py
backend/rest-api/routes/: infer.py
backend/rest-api/test/: config.yaml
backend/rest-api/tests/: config.yaml
frontend/: Dockerfile  main.py  makefile  pyproject.toml
frontend/test/: config.yaml
frontend/tests/: config.yaml
