[project]
name = "onnx-inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
    "onnxruntime>=1.20.1",
    "opencv-python>=4.11.0.86",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "isort>=6.0.0",
    "onnx>=1.17.0",
    "pre-commit>=4.1.0",
    "ruff>=0.9.7",
    "ultralytics>=8.3.77",
]
